--- a/css/propio.css
+++ b/css/propio.css
@@ -536,13 +536,56 @@ ul li::before {
 
 /********** Fim da Galeria **********/
 
+/********** botao whatsapp **********/
+
+ .whatsapp-button {
+      position: fixed;
+      bottom: 80px;
+      right: 20px;
+      background-color: #25D366;
+      border-radius: 50%;
+      width: 60px;
+      height: 60px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+      animation: pulse 1.5s infinite;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .whatsapp-button:hover {
+      transform: scale(1.1);
+      box-shadow: 0 6px 16px rgba(0, 0, 0, 0.4);
+    }
+
+    .whatsapp-button img {
+      width: 30px;
+      height: 30px;
+      filter: brightness(0) invert(1); /* ícone branco */
+    }
+
+    @keyframes pulse {
+      0% {
+        transform: scale(1);
+        box-shadow: 0 0 0 0 rgba(37, 211, 102, 0.6);
+      }
+      70% {
+        transform: scale(1.05);
+        box-shadow: 0 0 0 10px rgba(37, 211, 102, 0);
+      }
+      100% {
+        transform: scale(1);
+        box-shadow: 0 0 0 0 rgba(37, 211, 102, 0);
+      }
+    }
 
 
+/********** Fim do botao whatsapp **********/
 
+ /********** nossa equipe **********/
 
-
-
- 
 
     h2 {
       text-align: center;
